unpackaged/main/default/objects/project_cloud__Goal__c/project_cloud__Goal__c.object-meta.xml
<CustomObject>
    <label>Goal</label>
    <nameField>
        <label>Goal Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Goals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>