unpackaged/main/default/objects/project_cloud__Goal__c/fields/project_cloud__Completed_Percent__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Completed_Percent__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Goal Progress</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>