unpackaged/main/default/objects/project_cloud__Goal__c/fields/project_cloud__Date_Completed__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Date_Completed__c</fullName>
    <label>Date Completed</label>
    <type>Date</type>
</CustomField>