unpackaged/main/default/objects/project_cloud__Goal__c/fields/project_cloud__Description__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Description__c</fullName>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>