unpackaged/main/default/objects/project_cloud__Goal__c/fields/project_cloud__Primary_Value_Type__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Primary_Value_Type__c</fullName>
    <label>Primary Value Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Future</fullName>
            </value>
            <value>
                <fullName>Efficiency</fullName>
            </value>
            <value>
                <fullName>Market</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>